Fix alignment issue

--- a/app/javascript/packs/components/trainModalDirectionPane.scss
+++ b/app/javascript/packs/components/trainModalDirectionPane.scss
@@ -63,7 +63,6 @@
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
       }
-      vertical-align: bottom;
 
       .trip-id {
         @media only screen and (max-width: 767px) {
@@ -73,8 +72,8 @@
           max-width: 100%;
           -webkit-line-clamp: 1;
           -webkit-box-orient: vertical;
+          vertical-align: bottom;
         }
-        vertical-align: bottom;
       }
     }
 
